*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100a.htm
@@ -4,100 +4,30 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Splitting from a stream</title>
+<title>Branching</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Splitting from a stream</H1>
-<P CLASS="Para">
-Typically, you will want to split a stream under the following conditions: </P>
-<ul>
-  <li>
-    <p CLASS="Para">To fix a bug in an old version of a project</li>
-  <li>
-    <p CLASS="Para">To store project variants or private work in a
-    separate stream</li>
-</ul>
-<p CLASS="Para"> When splitting a stream you always split at a predefined point in
-time. This is called the <i>initial state</i> of the new stream. When you split
-a stream, the initial state is always a version.&nbsp;
-</p>
-<p CLASS="Para">Generally, you will split a stream with the intention of
-eventually merging the changes back into the originating stream.
-</p>
-<p CLASS="Para"> There are two options for splitting a stream.
-</p>
-<h2> Option 1: Splitting based on a project version
-</h2>
-<p>
-Choose this option if you are splitting based on an existing project
-version.&nbsp; This is often done to fix a bug in a previous
-version of your project. </p>
+<H1 CLASS="Head"> Branching</H1>
+<P CLASS="Para">Creating a branch and releasing resources to that branch is useful 
+  in cases where you are not ready to put your code in the main codebase yet. 
+  It is also useful for creating incremental patches to existing versions.</P>
+<P CLASS="Para">To create a branch:</P>
 <ol>
-  <li>Switch to the Team perspective or add the Repositories view to the current
-    perspective.</li>
-  <li>
-From the pop-up menu for the Repositories view, select New &gt; Stream.. The New
-    Stream wizard opens.</li>
-  <li>Select the repository that contains the stream you
-want to split.</li>
-  <li>Enter a name for the new stream and click <b>Finish</b> to close the
-    wizard.</li>
-  <li>Add a project version to the new stream to set the initial state of the
-    stream. To do this, select the new stream in the Repositories view and
-    select <b>Copy Version to Stream</b> from its pop-up menu. The Choose
-    Versions window opens.</li>
-  <li> Select the projects
-and their versions that you wish to copy to the stream.&nbsp;</li>
-  <li>
-Expand the new stream to see the projects. You will see the resources that are in the project version
-    that you added to the stream.</li>
-  <li>Select the project that you want to add to the workbench.&nbsp; From its
-    pop-up menu, select <b> Add to Workspace</b>.&nbsp; Changes released
-from the project will now go to the new stream.</li>
+  <li> 
+    <p CLASS="Para"> From the context menu of the project, select <b>Team &gt; 
+      Branch....</b>
+  </li>
+  <li>Enter the Branch Name for the new branch in the text area.</li>
+  <li>If the project in your workspace is not already a version, enter the Version 
+    Name to create in the text area.</li>
+  <li>If you would like to start working in the branch immediately, make sure 
+    the checkbox is selected.</li>
+  <li>Click <b>OK</b>.</li>
 </ol>
-<p> If you enable <b> Show Version Info</b> via the drop-down menu in
-the Navigator view's toolbar, you will see the new stream name shown to the right of
-the project.</p>
-<h2>
-Option 2: Splitting with changes in your workspace </h2>
-<P> In some cases you may not want to release your changes to
-everyone in the team, but would still like to version them. You may want to do
-this if your changes are not stable yet or if it will take a long time before you
-are ready to release them to the team.
-In this case you will want to create a new stream for releasing your changes. </P>
-<ol>
-  <li>Create a version of your project from the
-workspace to capture the state before you made any changes.&nbsp; This
-version will contain the base versions of the project's resources.&nbsp; The
-changes you have made from the base versions will later be released to the new
-stream.
-    <p>Right-click your project in the Navigator view and select <b>Version from
-    Workspace</b> from its pop-up menu.</li>
-  <li>
-Complete the Version Selected Resources page. (Versioning is covered in a
-    different topic in this documentation.)&nbsp;</li>
-  <li>When prompted, review the outgoing changes listed in the details
-window.&nbsp;</li>
-  <li>Switch to the Team perspective or add the Repositories view to the current
-    perspective. Right-click in the Repositories view and select <b> New &gt;
-    Stream</b> from the pop-up menu to create a new stream. The New Stream
-    wizard opens.</li>
-  <li>Select the repository that contains the stream you want to split.</li>
-  <li>Enter a name ofr the new stream and click <b>Finish</b> to close the
-    wizard.</li>
-  <li>Add the project version to the new stream to set the initial state of the
-    stream. To do this, select the new stream in the Repositories view, select <b>Copy
-    Version to Stream</b> from its pop-up menu, and in the Choose Versions
-    window select the project and version that you created earlier.</li>
-  <li>In the Navigator view, select the project and select <b>Properties</b>
-    from its pop-up menu to change sharing of the project to the new stream.</li>
-  <li>Synchronize the project with the new stream. Your changes will appear as
-    outgoing to the new stream. Release them into the new stream.</li>
-</ol>
-
-
+<p><b>Note</b>: The Version Name is important; you will need this when you want 
+  to merge your changes later on. It identifies the point at which the branch 
+  was created.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
 Streams</a><a href="../reference/ref-51a.htm"><br>
@@ -106,14 +36,16 @@ Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-100a.htm"><br>
-</a><a href="tasks-115.htm">
+</a><a href="tasks-96.htm">
+Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
+Replacing resources with a repository
+        version</a><a href="tasks-111.htm"><br>
+Creating a new stream</a><a href="tasks-100a.htm"><br>
+Splitting from a stream</a><a href="tasks-115.htm"><br>
 Synchronizing with a stream</a><a href="tasks-113.htm"><br>
 Catching up</a><a href="tasks-113b.htm"><br>
 Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a>
+Merging from a stream</a>
 </p>
 
 
