--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
@@ -4,63 +4,48 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Merging from a stream</title>
+<title>Merging from a Branch</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Merging from a stream</H1>
-<P CLASS="Para">Merging takes changes between the initial state and the end
-state in a stream, and merges
-them into your workspace. Typically the initial state is the root of a stream (project version) and the end state
-is either the
-stream or another project version.<br>
-<br>
-It is very important to understand that the destination of the merge is always the project in your
-workbench. After the merge has completed
-you can test the changes locally and then release them to the new stream. </P>
-<P CLASS="Para">To merge a project: </P>
+<H1 CLASS="Head"> Merging from a Branch</H1>
+<P CLASS="Para">After creating and working in a Branch for some time, you may 
+  want to merge your changes from the branch into another branch, or into HEAD. 
+  To do this, you will need to know:</P>
 <ol>
-  <li>
-    <p CLASS="Para">In the Repositories view, select the
-project that you want to merge.</li>
-  <li>
-    <p CLASS="Para">From the project's pop-up menu, select <b>Add To Workspace</b>.</li>
-  <li>
-    <p CLASS="Para">In the Navigator view, right-click the project and select <b>Team
-    &gt; Merge</b> from the pop-up menu. The Merge wizard opens.</li>
-  <li>
-    <p CLASS="Para">
-In the Merge Setup page, select the project and the repository with which the
-project is shared, and click <b>Next</b>.</li>
-  <li>
-    <p CLASS="Para">
-On the Choose Initial State page, choose the initial state of the merge.&nbsp; This will usually be the root project version on which the originating stream
-was split.&nbsp; Select a version in the list and click <b>Next</b>.</li>
-  <li>
-    <p CLASS="Para">On the Choose End State page, choose the end state of the
-merge.&nbsp; This can be either a&nbsp; version (for example if
-you versioned from your stream before the merge) or it can be a stream.&nbsp;
-Click <b>Finish</b> to close the wizard.
-A merge view opens in the editor area.&nbsp; This shows the changes between the initial and end state based on the resources in
-your workspace.&nbsp;</li>
-  <li>
-    <p CLASS="Para"> Catch up or merge changes within this view. At this point,
-    you are working locally. You cannot release changes from within the merge view.</li>
-  <li>
-    <p CLASS="Para">
- After merging the changes, close the merge view and test and review the result of the merge. If you are happy with it, you can release the
-changes to the destination stream.</li>
+  <li>The name of the branch or version that contains your changes.</li>
+  <li>The version from which the branch was created. This is the version name 
+    that you supplied when branching.</li>
 </ol>
-<p>
-<b>Tip</b>: After merging changes into a stream, it is recommended that you create a project version to save the project's state after the merge. This project
-version can be used to split again for subsequent merges. </p>
-
+<p>To merge your changes:</p>
+<ol>
+  <li> 
+    <p CLASS="Para"> Ensure that the destination is loaded into your workspace. 
+      For example, if you wish to merge your changes into HEAD, make sure the 
+      project is shared with HEAD in your workspace. To do this, select the project 
+      and choose <b>Replace With &gt; Branch or Version...</b> from the context 
+      menu. Then select the branch to replace with.
+  </li>
+  <li>Select the project and choose <b>Team &gt; Merge...</b>.</li>
+  <li>Enter the start point of the merge. This is the version from which the branch 
+    was created. Click <b>Next</b>.</li>
+  <li>Enter the branch or version which contains the changes you want to merge. 
+    Click <b>Finish</b>.</li>
+  <li>A Merge editor will open, showing all differences between your workspace 
+    and the branch with the changes.</li>
+  <li>Load all of the desired changes into the workspace. This may be accomplished 
+    by either manually merging changes and then choosing <b>Save</b> from the 
+    text editor's context menu, or by choosing <b>Update from Repository</b>, 
+    <b>Override and Update</b>, or <b>Merge Changes Into Local Copy</b> from the 
+    tree's context menu.</li>
+  <li>After all desired changes are in the workspace, choose <b>Team &gt; Synchronize 
+    with Repository</b>. You may then release all the changes into the destination.</li>
+</ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
 Streams</a><a href="../reference/ref-51a.htm"><br>
 </a><a href="../concepts/concepts-30.htm">
-Team synchronization</a></p>
+Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
@@ -68,17 +53,18 @@ Team synchronization</a></p>
 Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
 Replacing resources with a repository
         version</a><a href="tasks-111.htm"><br>
-</a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-119.htm"><br>
-</a><a href="tasks-100a.htm">
+Creating a new stream</a><a href="tasks-100a.htm"><br>
 Splitting from a stream</a><a href="tasks-115.htm"><br>
 Synchronizing with a stream</a><a href="tasks-113.htm"><br>
 Catching up</a><a href="tasks-113b.htm"><br>
 Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-</a><a href="tasks-114.htm">
-Releasing resources to the stream</a><a href="tasks-100.htm"><br>
-Creating a version of a project</a><a href="tasks-118.htm"><br>
-Versioning projects in the stream</a>
+Merging from a stream</a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
+</a><a href="../reference/ref-51a.htm">
+Streams in CVS</a>
 </p>
 
 <p>&nbsp;<br>
