--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-119.htm
@@ -4,51 +4,32 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Viewing the history of a stream resource</title>
+<title>Viewing a File's Revision History</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Viewing the history of a stream resource</H1>
-<P CLASS="Para">
-<b>Prerequisite</b>: You must have a repository
-location and be authenticated to the server, before you can view the history of a stream resource in
-the repository.</P>
+<H1 CLASS="Head"> Viewing a File's Revision History</H1>
+<P CLASS="Para">Every time you commit a file to the CVS repository, a new revision 
+  is created. Each revision is identified by a number (for example, 1.1 or 1.11.3.5). 
+  Along with each revision is stored the author, the date, and a release comment.</P>
+<P CLASS="Para">To view the resource history for a file:</P>
 <ol>
-  <li>
-    <p CLASS="Para">Switch to the Team perspective or add the Repositories view
-    to the current perspective.</li>
-  <li>
-    <p CLASS="Para">
-In the Repositories view, expand either the <b>Project Versions </b>or the <b>Streams</b>
-    category, and select the repository location that contains the
-resource whose history you want to view.</li>
-  <li>
-    <p CLASS="Para">Right-click and select <b>Show in Resource
-History</b> from the pop-up menu.</li>
+  <li>Select the file in the Navigator view. From the context menu, choose <b>Team 
+    &gt; Show in Resource History</b>.</li>
+  <li>The CVS Resource History view will open and show a history for the selected 
+    file.</li>
 </ol>
-<p CLASS="Para">The Resource History view shows you the following&nbsp;information about each version of
-the stream resource:</p>
-<UL>
-<LI>Version - consists of a repository-generated version number followed by a
-  list of additional version information. In CVS these are the tags associated
-  with that version.</li>
-  <li>Date Created.</LI>
-<LI>Author.</LI>
-<LI>Version Comments (if any).</LI>
-</UL>
-<p><b>Note</b>: The CVS server may not support history.&nbsp; In this case you will not
-see the history information specified above.&nbsp;</p>
-
-
+<p><b>Note:</b> The CVS Resource History view also shows you all version and branch 
+  tags that are associated with the file.</p>
+<p><b>Tip:</b> You can drag and drop a file from the Navigator view into the CVS 
+  Resource History view instead of choosing the menu item.</p>
+<p><b>Tip:</b> By clicking on column headings in the CVS Resource History view 
+  you can change the sorting order of the items.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
 Streams</a><a href="../reference/ref-51a.htm"><br>
 </a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;<a href="../concepts/concepts-27.htm"><br>
-Resource versions<br>
-</a><a href="../concepts/concepts-17a.htm">
-Local history</a></p>
+Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
@@ -56,10 +37,18 @@ Local history</a></p>
 Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
 Replacing resources with a repository
         version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-117.htm"><br>
-Associating a project with a stream</a><a href="tasks-100a.htm"><br>
+Creating a new stream</a><a href="tasks-100a.htm"><br>
 Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a>
+Synchronizing with a stream</a><a href="tasks-113.htm"><br>
+Catching up</a><a href="tasks-113b.htm"><br>
+Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
+Merging from a stream</a>
+</p>
+
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
+</a><a href="../reference/ref-51a.htm">
+Streams in CVS</a>
 </p>
 
 <p>&nbsp;<br>
