Reverted back to old names

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
@@ -4,56 +4,57 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a repository location</title>
+<title>Creating a CVS repository location</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating a repository location</H1>
+<H1 CLASS="Head"> Creating a CVS repository location</H1>
 <P CLASS="Para">
 <b>Prerequisite</b>: A CVS server must already be configured on the host machine to create a
 valid repository location in the workbench.</P>
 <P CLASS="Para">
 To create a new repository location:</P>
 <ol>
-  <li>
-    <p CLASS="Para">Switch to the Team perspective.</li>
-  <li>
-    <p CLASS="Para">On the main menu bar, select File &gt; New &gt; Other. The
-    New Repository Location wizard opens.</li>
-  <li>
-    <p CLASS="Para">In the left pane, select <b>CVS</b>. In the right pane, select
-    <b> Repository Location</b>. Click <b>Next</b>.</li>
-  <li>
-    <p CLASS="Para">
-From the <b> Connection Type</b> list, select the authentication protocol of the CVS
-server.&nbsp;</li>
-  <li>
-    <p CLASS="Para">
-In the <b> User Name</b> field, type the user name under which you want to connect to
-the repository.</li>
-  <li>
-    <p CLASS="Para">In the <b> Host Name</b> field, type the address of the host,
-    for example <samp>mymachine.com</samp>.</li>
-  <li>
-    <p CLASS="Para">
-In the <b> Repository Path </b> field, type the path to the repository on the host,
-    for example <samp>/home/repo, d:/repo</samp>.</li>
-  <li>
-    <p CLASS="Para">
-The <b> CVS Location</b> field automatically updates with the connection information from the other fields in the dialog. You do not need to type anything else in this field.</li>
-  <li>
-    <p CLASS="Para">(Optional)
-Select the <b>Validate location on finish</b> if you want to authenticate
-the specified user to the specified host when you close this wizard. (If you do
-    not select this option, the user name will be authenticated later, when
-you try to access the contents of the repository.)</li>
-  <li>
-    <p CLASS="Para">Click <b>Finish</b>. The repository location is created. If you selected the option to validate on completion, you are
-prompted for a password to authenticate to the host. Type
-the specified user's password and click <b>OK</b>.</li>
+  <li> 
+    <p CLASS="Para">Open the CVS Repositories View by selecting <b>Window &gt; 
+      Show View &gt; Other...</b> on the main menu bar and then selecting <b>CVS 
+      &gt; CVS Repositories</b> from the Show View dialog. Alternatively, the 
+      CVS Repositories view is also shown in the CVS Repository Exploring perspective. 
+  </li>
+  <li>From the context menu of the CVS Repositories View, select <b>New &gt; Repository 
+    Location</b>. The Add CVS Repository wizard opens.</li>
+  <li>Enter the information required to identify and connect to the repository 
+    location: 
+    <ol type="a">
+      <li>In the <b> Host </b> field, type the address of the host, for example 
+        <samp>mymachine.com</samp>. </li>
+      <li>In the <b> Repository path </b> field, type the path to the repository 
+        on the host, for example <samp>/home/repo, d:/repo</samp>.</li>
+      <li>In the <b> User </b> field, type the user name under which you want 
+        to connect to the repository. </li>
+      <li>In the <b>Password</b> field, type the password for the above user name.</li>
+      <li> From the <b> Connection Type</b> list, select the authentication protocol 
+        of the CVS server.&nbsp; There are three connection methods that come 
+        with the Eclipse CVS client: 
+        <ul>
+          <li><b>pserver</b> - a CVS specific connection method.</li>
+          <li><b>extssh</b> - an SSH 1.0 client included with Eclipse</li>
+          <li><b>ext</b> - the CVS ext connection method which uses an external 
+            tool such as SSH to connect to the repository. The tool used by ext 
+            is configured in the <b>Team &gt; CVS &gt; EXT Connection Method</b> 
+            preference page. </li>
+        </ul>
+      </li>
+      <li>If the host uses a custom port, enable <b>Use Por</b>t and enter the 
+        port number.</li>
+    </ol>
+  </li>
+  <li>(Optional) Select the <b>Validate connection on finish</b> if you want to 
+    authenticate the specified user to the specified host when you close this 
+    wizard. (If you do not select this option, the user name will be authenticated 
+    later, when you try to access the contents of the repository.)</li>
+  <li> Click <b>Finish</b>. The repository location is created. </li>
 </ol>
-
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
