--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
@@ -4,16 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Refreshing the repository view</title>
+<title>Refreshing the CVS Repository view</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Refreshing the repository view</H1>
-<P CLASS="Intro">
-
-There are two ways to refresh the Repositories view in order to see the current
-connection status of all repositories:
+<H1 CLASS="Head"> Refreshing the CVS Repositories view</H1>
+<P CLASS="Intro"> There are two ways to refresh the CVS Repositories view in order 
+  to see the current connection status of all repositories: 
 <ul>
   <li>
     <p CLASS="Intro">Click the <b> Refresh View</b> button on the view's
@@ -25,9 +22,9 @@ Press F5 on the keyboard</LI>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-Repositories view</a><a href="../concepts/concepts-27b.htm"><br>
-Streams</a></p>
+  CVS Repositories</a><a href="../concepts/concepts-27v.htm"><br>
+  CVS Repositories view</a><a href="../concepts/concepts-27b.htm"><br>
+  Branches</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
