--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-94.htm
@@ -4,27 +4,25 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Discarding a repository location</title>
+<title>Discarding a CVS repository location</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Discarding a repository location</H1>
+<H1 CLASS="Head"> Discarding a CVS repository location</H1>
 <P CLASS="Intro">
 
 <b>Note</b>: You cannot discard a location if you have projects in the workbench that
 are shared with that location.
-<P CLASS="Intro">
-
-To discard a repository location:
+<P CLASS="Intro"> To discard a CVS repository location: 
 <ol>
   <li>
-    <p CLASS="Intro">Switch to the Team perspective or add the Repository view
-    to the current perspective.</li>
+    <p CLASS="Intro">Switch to the CVS Repository Exploring perspective or add 
+      the CVS Repositories view to the current perspective.
+  </li>
   <li>
-    <p CLASS="Intro">
-In the Repositories view, select the repository location that you want to delete
-    from the workbench.</li>
+    <p CLASS="Intro"> In the CVS Repositories view, select the repository location 
+      that you want to delete from the workbench.
+  </li>
   <li>
     <p CLASS="Intro">Select <b>Discard Location</b> from the pop-up menu.</li>
 </ol>
@@ -32,8 +30,8 @@ In the Repositories view, select the repository location that you want to delete
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-Repositories view</a></p>
+  CVS Repositories</a><a href="../concepts/concepts-27v.htm"><br>
+  CVS Repositories view</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
