--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-111.htm
@@ -4,36 +4,39 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a new stream in a repository</title>
+<title>Defining a branch tag</title>
 <meta name="keyword" content="team">
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating a new stream </H1>
-<P CLASS="Intro">
-<b>Prerequisite</b>: Before you create a new stream, you must have a valid
-repository location in the Repositories view.
-<P CLASS="Intro">
-To create a new stream:
+<H1 CLASS="Head"> Defining a branch tag</H1>
+<P CLASS="Intro"> <b>Prerequisite</b>: Before you define a branch tag, you must 
+  have a valid repository location in the CVS Repositories view. 
+<P CLASS="Intro"> To define a branch tag: 
 <ol>
-  <li>
-    <p CLASS="Intro">Switch to the Team perspective.</li>
-  <li>
-    <p CLASS="Intro">From the pop-up menu for the Repositories view, select <b>New
-    &gt; Stream</b>. The New Stream wizard opens.</li>
-  <li>
-    <p CLASS="Intro">
-From the <b> Repository</b> list, select the repository where you want the stream to
-reside.</li>
-  <li>
-    <p CLASS="Intro">
-In the <b> Name</b> field, type the name for the new stream.</li>
-  <li>
-    <p CLASS="Intro">Click <b>Finish</b> to create the new stream and close the
-    wizard.</li>
+  <li> 
+    <p CLASS="Intro">Switch to the CVS Repository Exploring perspective or add 
+      the CVS Repositories view to the current perspective. 
+  </li>
+  <li>Select the repository location that is to contain the branch.</li>
+  <li> 
+    <p CLASS="Intro">From the pop-up menu for the CVS Repositories view, select 
+      <b>Define Branch Tag</b>.
+  </li>
+  <li> 
+    <p CLASS="Intro"> In the dialog that appears, type the name of the branch 
+      tag.
+  </li>
+  <li> 
+    <p CLASS="Intro"> In the <b> Name</b> field, type the name for the new stream.
+  </li>
+  <li> Click <b>OK</b> to add the branch tag to the list of branches for the repository 
+    location.</li>
 </ol>
-
+<p><b>Note</b>: Defining a branch tag will not add the tag to the repository. 
+  If the tag already exists in the repository, defining the tag in the CVS Repositories 
+  view will allow the contents of the branch to be browsed. If the tag does not 
+  exist, then the contents of the branch will be empty.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
 Repositories</a><a href="../concepts/concepts-27b.htm"><br>
@@ -43,9 +46,9 @@ Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-Creating a repository location</a><a href="tasks-96.htm"><br>
+Creating a CVS repository location</a><a href="tasks-96.htm"><br>
 Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-117.htm"><br>
+Defining a branch</a><a href="tasks-117.htm"><br>
 Associating a project with a stream</a>
 </p>
 
