*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -4,41 +4,44 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Associating a project with a stream</title>
+<title>Sharing a new project using CVS</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Associating a project with a stream</H1>
-<P CLASS="Para">When you change the sharing of a project, you change the
-stream with which it is associated. </P>
-<P CLASS="Para"><b>Important</b>: If you change the sharing to a stream in <i> another</i> repository,
-your project's existing synchronization information is deleted. (This information is used to track
-the version state of local resources and helps determine outgoing, incoming and conflicting changes.)
-This is also true if&nbsp; you add the project from the stream via the Repositories view.&nbsp;<br>
-<br>
-By contrast, changing the sharing to another stream in the <i> same</i> repository does not change the synchronization information.
-You would normally do this task in order to split from a stream and release the changes into another stream.&nbsp; </P>
-<P CLASS="Para">
-To change the stream that a project is associated with: </P>
+<H1 CLASS="Head"> Sharing a new project using CVS</H1>
+<P CLASS="Para">There are several scenarios that can occur when sharing a project 
+  using CVS. The most common scenario is sharing a new project using CVS when 
+  the project does not already exist remotely.</P>
+<P CLASS="Para"> To share a new project using CVS: </P>
 <ol>
-  <li>
-    <p CLASS="Para">
-In the Navigator view, select the project whose stream association you want to change.</li>
-  <li>
-    <p CLASS="Para">Select <b>Properties</b> from the project's pop-up menu. The
-    Properties page opens.</li>
-  <li>
-    <p CLASS="Para">In the left pane, select <b>Team</b>. The Team Properties
-    page opens.</li>
-  <li>
-    <p CLASS="Para">Click the <b>Change</b> button to open the Set Project
-    Sharing window.</li>
-  <li>
-    <p CLASS="Para">Select the repository and stream with which you want to
-    associate the project, then click <b>OK</b>.</li>
-  <li>
-    <p CLASS="Para">Click <b>OK</b> to close the Properties page.</li>
+  <li> 
+    <p CLASS="Para"> In the Navigator view, select the project to be shared.
+  </li>
+  <li> 
+    <p CLASS="Para">Select <b>Team &gt;</b> <b>Share Project..</b>. from the project's 
+      pop-up menu. The Share Project wizard opens.
+  </li>
+  <li>From the list of available repository providers, choose <b>CVS</b> and click 
+    <b>Next </b>to go to the next page. <b>Note</b>: If there is only one repository 
+    provider available, the first page will be skipped and next page will be displayed 
+    automatically.</li>
+  <li>Select the target repository from the list of known repositories or, if 
+    the target repository is not in this list, choose to create a new repository 
+    location and click <b>Next</b>.</li>
+  <li> 
+    <p CLASS="Para">If entering a new repository location, enter the repository 
+      information and click <b>Next</b> when completed. <b>Note</b>: this page 
+      is the same format as the <a href="task-92.htm">Add CVS Repository wizard</a>.
+  </li>
+  <li>(Optional)Either choose to use the name of the local project as the remote 
+    project name or enter another name.</li>
+  <li> 
+    <p CLASS="Para">Click <b>Finish</b> to share the project with the repository. 
+      The project folder will be created remotely and the Synchronize view will 
+      open and allow the committing of the project's resouces. <b>Note</b>: If 
+      the project already exists remotely, the Synchronize view will show conflicts 
+      on any files that exist both locally and remotely.
+  </li>
 </ol>
 
 
