--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
@@ -4,46 +4,58 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Adding resources from a repository to the workbench</title>
+<title>Checking out a project from a CVS repository</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1>
-Adding resources from a repository to the workbench</H1>
-<P>To add resources from a team repository to the workbench:</P>
+<H1> Checking out a project from a CVS repository</H1>
+<P>To check out a project from a CVS repository to the workbench:</P>
 <ol>
-  <li>
-    <p>Switch to the Team perspective or add the Repositories view
-    to the current perspective.</li>
-  <li>
-    <p>In the Repositories view, expand the repository
-location.</li>
-  <li>Select the resources that you want to add to the workbench. If you are looking for a resource in a particular project
-  version:
+  <li> 
+    <p class="Intro">Switch to the CVS Repository Exploring perspective or add 
+      the CVS Repositories view to the current perspective. 
+  </li>
+  <li> 
+    <p>In the CVS Repositories view, expand the repository location. 
+  </li>
+  <li>Expand <b>HEAD</b> and select the folders that you want to add as projects 
+    to the workbench. If you are looking for a folder in a particular version: 
     <ol>
-    <li type="a">Expand the <b> Project Versions</b> category and find the project name that holds the resource
-      that you
-      want to add to the workbench.&nbsp;&nbsp;</li>
-    <li>Expand the project to reveal its versions. You can
-      expand each project version to view the resources it holds.</li>
+      <li type="a">Expand the <b> Versions</b> category and find the folder name 
+        that you want to add to the workbench.&nbsp;&nbsp;</li>
+      <li>Expand the folder to reveal its versions.</li>
     </ol>
-  <P>If you are looking for the latest resources in the stream: </P>
+    <P>If you are looking for the latest folder in a branch: </P>
     <ol type="a">
-    <li>Expand the <b> Streams</b> category.</li>
-    <li>Expand the stream that holds the resources that you want to add to the
-      workbench.</li>
+      <li>Expand the <b> Branches</b> category.</li>
+      <li>Expand the banch that holds the folder that you want to add to the workbench.</li>
     </ol>
-  <li>From the pop-up menu for the selected resources, select <b>Add to
-    Workspace.</b></li>
+    <p><b>Note</b>: If you do not see the folders you are expecting, ensure that 
+      the CVS Repositories view is in show folders mode by selecting <b>Show Folders</b> 
+      from the drop down menu in the title bar of the view.</p>
+  <li>From the pop-up menu for the selected folders, select one of the following</li>
+
+
+  <ol>
+    <li type="a"><b> Checkout as Project</b> to check out each of the selected 
+      folders as a project in the local workspace with the same name as the folder 
+      in the respository.</li>
+    <li><b>Checkout As...</b> to check out the selected folder into a custom configured 
+      project in the local workspace. <b>Note</b>: This option is only enable 
+      for single folders.</li>
+  </ol>
+  <li>If <b>Checkout As...</b> was chosen, one of two possible dialogs is displayed 
+    depending on whether the folder in the repository contains a .project file. 
+    <ol type="a">
+      <li>If there is a .project file, the dialog will accept a custom project 
+        name and location.</li>
+      <li>Otherwise, the dialog will be the New Project wizard which allows full 
+        customization of the project (e.g. Java project).</li>
+    </ol>
+  </li>
 </ol>
-
-
-<P><b>Tip</b>: You can select <b>Workbench &gt; Preferences &gt; Team</b> from
-the main toolbar and select the radio button for <b>Prompt for a location when
-adding projects from the repository</b>.
-</P>
-
-
+<p><b>Tip</b>: Any folder, including non-root folders, can be checked out from 
+  a CVS repository. </p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
 Repositories</a><a href="../concepts/concepts-27v.htm"><br>
