--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30b.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Synchronize view</title>
+<title>CVS Synchronize view</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Synchronize view</H1>
+CVS Synchronize view</H1>
 <P> This view allows you to update resources in the workbench and commit resources 
   from the workbench to a branch.&nbsp;Here is what the Synchronize view looks 
   like:</P>
